fixed enemy overlap sound

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
   color: white;
 }
 
-@media screen and (max-width:768px), screen and (max-height:880px){
+@media screen and (max-width:1080px), screen and (max-height:880px){
   .App {
     display:none;
   }
